--- a/ant-protomak-task/pom.xml
+++ b/ant-protomak-task/pom.xml
@@ -3,14 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
+		<groupId>uk.co.jemos.protomak</groupId>
+		<artifactId>protomak-parent</artifactId> 
+		<version>0.0.1.RELEASE</version>
 	</parent>
 
 	<groupId>uk.co.jemos.protomak</groupId>
-	<artifactId>ant-protomak-task</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>ant-protomak-task</artifactId>	
 	<packaging>jar</packaging>
 
 	<name>ant-protomak-task</name>
