--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,26 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<id>assembly-project</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputDirectory>${project.build.directory}/site/downloads</outputDirectory>
+					<descriptors>
+						<descriptor>src/main/assembly/project.xml</descriptor>						
+					</descriptors>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
