--- a/ant-protomak-task/pom.xml
+++ b/ant-protomak-task/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>uk.co.jemos.protomak</groupId>
 		<artifactId>protomak-parent</artifactId> 
-		<version>0.0.1.RELEASE</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>uk.co.jemos.protomak</groupId>
