--- a/ant-protomak-task/src/test/resources/build.xml
+++ b/ant-protomak-task/src/test/resources/build.xml
@@ -4,11 +4,18 @@
 	
   <path id="protomak-test-path" path="${runtime_classpath}" />
 	
-  <taskdef name="mytask" classname="uk.co.jemos.protomak.ant.task.AntProtomakXsdToProtoTask"
+  <taskdef name="xsdToProto" classname="uk.co.jemos.protomak.ant.task.AntProtomakXsdToProtoTask"
   	classpathref="protomak-test-path" />
+	
+  <taskdef name="allXsdsToProtos" classname="uk.co.jemos.protomak.ant.task.AntProtomakAllXsdsToProtoTask"
+	  	classpathref="protomak-test-path" />
 
   <target name="main">  	
-    <mytask inputXsdFile="${inputXsdPath}" 
-    		outputFolder="/home/protomak/tests-ant" />
+    <xsdToProto inputXsdFile="${inputXsdPath}" 
+    		    outputFolder="/home/protomak/tests-ant" />
+  	
+    <allXsdsToProtos inputXsdFile="${inputFolder}" 
+    		    outputFolder="/home/protomak/tests-ant" 
+    			extension=".xsd"/>
   </target>
 </project>
