--- a/maven-protomak-plugin/pom.xml
+++ b/maven-protomak-plugin/pom.xml
@@ -96,6 +96,18 @@
 					</descriptors>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<attach>true</attach>
+					<show>private</show>
+					<doctitle>Jemos Protomak - Version: ${project.version}</doctitle>
+					<footer>Jemos 2002 - 2011: All Rights Reserved. Protomak runs under
+						the MIT license</footer>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
