PMK-30 Changed the output folder where antrun:run writes the output proto files

--- a/ant-protomak-task/src/test/resources/build.xml
+++ b/ant-protomak-task/src/test/resources/build.xml
@@ -12,10 +12,10 @@
 
   <target name="main">  	
     <xsdToProto inputXsdFile="${inputXsdPath}" 
-    		    outputFolder="/home/protomak/tests-ant" />
+    		    outputFolder="${user.home}/protomak/tests-ant" />
   	
     <allXsdsToProtos inputXsdFile="${inputFolder}" 
-    		    outputFolder="/home/protomak/tests-ant" 
+    		    outputFolder="${user.home}/protomak/tests-ant" 
     			extension=".xsd"/>
   </target>
 </project>
