--- a/protomak-engine/pom.xml
+++ b/protomak-engine/pom.xml
@@ -86,6 +86,12 @@
 					</execution>
 				</executions>
 				<configuration>
+					<archive>
+                    	<manifest>
+                    		 <addClasspath>true</addClasspath>                    		
+                        	<mainClass>uk.co.jemos.protomak.Main</mainClass>
+                    	</manifest>
+                	</archive>					
 					<outputDirectory>${project.build.directory}/site/downloads</outputDirectory>
 					<descriptors>
 						<descriptor>src/main/assembly/project.xml</descriptor>
@@ -203,6 +209,13 @@
 			<groupId>org.fusesource.hawtbuf</groupId>
 			<artifactId>hawtbuf-protoc</artifactId>
 			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
