--- a/protomak-engine/pom.xml
+++ b/protomak-engine/pom.xml
@@ -92,7 +92,7 @@
 				<executions>
 					<execution>
 						<id>assembly-project</id>
-						<phase>install</phase>
+						<phase>deploy</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
