fixed the tests to work with the proper protobuf numeric types. renamed the maven plugin to conform to current recommendations.

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<modules>
 		<module>protomak-engine</module>
-		<module>maven-protomak-plugin</module>
+		<module>protomak-maven-plugin</module>
 		<module>ant-protomak-task</module>
 	</modules>
 
